# youtuop-1

./: .env.example  .gitignore  CLAUDE.md  Makefile  Makefile.additions  README.md  audit-results.txt  audit_report.md  docker-compose.services.yml  docker-compose.yml  go.mod  security-audit-enterprise.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: buf-lock-generate.yml  ci.yml  generate-gosum.yml  gitops-validate.yml  image-sign.yml  load-test.yml  promote-staging-to-prod.yml  proto-breaking-change.yml  release.yml
infra/: docker-compose.m4.yml
infra/argocd/: argocd-notifications-externalsecret.yaml
infra/clickhouse/: init.sql
infra/falco/: platform-rules.yaml
infra/pgbouncer/: deployment.yaml  service.yaml
internal/platform/: go.mod  go.sum
k8s/base/: kustomization.yaml  namespace-deny-all.yaml  namespaces.yaml
migrations/postgres/: 001_init_schema.sql  002_tiering_metadata.sql
proto/: buf.gen.yaml  buf.yaml
scripts/: alertmanager.yaml  alerts.yaml  audit.sh  audit.sh.bak  migrate-all-tenants.sh  migrate.sh  mimir.yaml  otel-collector.yaml  setup-cert-manager-m5.sh  setup-pki.sh  tempo.yaml  vault-setup.sh
scripts/dr/: RUNBOOK.md
scripts/grafana/: dashboards.yaml  datasources.yaml
scripts/load-tests/: ingestion.js
services/analytics/: Dockerfile  Dockerfile.arm64  go.mod  go.sum
services/auth/: Dockerfile  Dockerfile.arm64  go.mod  go.sum
services/jobs/: go.mod  (+3 more)
services/processing/: Cargo.toml  Dockerfile.arm64  build.rs  deny.toml
services/processing/src/: main.rs
services/processing/src/consumer/: mod.rs
services/processing/src/engine/: mod.rs
services/processing/src/grpc/: mod.rs
workflows/: ci.yml
(+349 files in other folders)
