[package]
name = "processing"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[[bin]]
name = "processing"
path = "src/main.rs"

[dependencies]
tonic            = { version = "0.12", features = ["tls", "gzip"] }
tonic-reflection = "0.12"
prost            = "0.13"
prost-types      = "0.13"

tokio = { version = "1", features = [
  "rt-multi-thread", "macros", "signal", "time", "sync", "fs", "net"
] }
tokio-stream = "0.1"
futures      = "0.3"

rdkafka = { version = "0.36", features = ["cmake-build", "ssl"] }

tracing               = "0.1"
tracing-subscriber    = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry         = "0.24"
opentelemetry_sdk     = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp    = { version = "0.17", features = ["tonic"] }
tracing-opentelemetry = "0.25"

axum       = "0.7"
tower-http = { version = "0.5", features = ["trace"] }

# Metrics — using metrics-rs (no protobuf dependency, no CVEs)
metrics            = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }

nalgebra  = "0.32"
statrs    = "0.16"
ndarray   = "0.17"
thiserror = "1"
anyhow    = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Rate limiting
governor = { version = "0.6", features = ["std"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

[profile.dev]
opt-level = 1
